Fix some issues on small screens

--- a/src/files/website/css/main.css
+++ b/src/files/website/css/main.css
@@ -355,6 +355,17 @@ h1 {
   padding-top: 15px !important;
 }
 
+@media only screen and (max-width: 599px) {
+  .navbar-header {
+    margin-left: -40px;
+    margin-right: -40px;
+  }
+
+  .navbar-nav > li > a {
+    font-weight: 500;
+  }
+}
+
 .navbar-brand img {
   margin-top: -8px;
 }
@@ -596,7 +607,27 @@ h1 {
 }
 
 .features .carousel .carousel-inner {
-  height: 400px;
+  height: 440px;
+}
+
+@media only screen and (max-width: 600px) {
+  .features .carousel .carousel-inner {
+    height: 720px;
+  }
+
+  .features .carousel .carousel-inner .feature-image {
+    display: block;
+    margin: 0;
+    padding: 0;
+  }
+
+  .features .carousel .carousel-inner .feature-image .media-object {
+    display: block;
+    left: 0;
+    margin: auto;
+    padding: 0;
+    right: 0;
+  }
 }
 
 .features .carousel-indicators {
